scenario-04/service-a.yaml
# play-with-kubernetes/scenario-04/service-a.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: s04-service-a-ns
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-deploy
  namespace: s04-service-a-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
      version: 0.0.1
  template:
    metadata:
      labels:
        app: service-a
        version: 0.0.1
    spec:
      serviceAccountName: service-a-sa
      containers:
      - name: service-a-co
        image: curlimages/curl
        command: ["/bin/sh"]
        args: ["-c", "while curl http://s04.api.company.com/uuid; do sleep 1.0; done;"]
