scenario-04/service-b.yaml
# play-with-istio/scenario-04/service-b.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: s04-service-b-ns
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-deploy
  namespace: s04-service-b-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
      version: 0.0.1
  template:
    metadata:
      labels:
        app: service-b
        version: 0.0.1
    spec:
      serviceAccountName: service-b-sa
      containers:
      - name: service-b-co
        image: kennethreitz/httpbin
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: s04-service-b-ns
spec:
  selector:
    app: service-b
    version: 0.0.1
  ports:
  - name: service-b-http-port
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: api-company-com-service-entry
  namespace: s04-service-b-ns
spec:
  hosts:
    - s04.api.company.com
  location: MESH_INTERNAL
  resolution: STATIC
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-company-com-virtual-service
  namespace: s04-service-b-ns
spec:
  hosts:
    - s04.api.company.com
  http:
    - name: service-b-http-route
      match:
        - method:
            exact: GET
          headers:
            host:
              exact: s04.api.company.com
          uri:
            exact: /uuid
      route:
        - destination:
            host: service-b.s04-service-b-ns.svc.cluster.local
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: service-a-to-get-api-company-com-get-uuid-authorization-policy
  namespace: s04-service-b-ns
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              # Spiffe Id:
              - cluster.local/ns/s04-service-a-ns/sa/service-a-sa
    - to:
        - operation:
            methods:
              - GET
            hosts:
              - s04.api.company.com
            paths:
              - /uuid
